--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
 
-<!-- ===== TOP BAR ===== -->
+<!-- ===== TOP APP BAR ===== -->
 <header class="top-app-bar">
   <span class="top-app-title">HarDil</span>
   <span class="menu-icon" id="openMenu">☰</span>
@@ -40,7 +40,9 @@
     <h2>HarDil</h2>
     <button id="closeMenu">✕</button>
   </div>
+
   <div class="drawer-content">
+
     <h4>Navigate</h4>
     <a href="#social">🌐 Social</a>
     <a href="#jobs">💼 Jobs</a>
@@ -53,6 +55,20 @@
     <a href="#health">🩺 Health</a>
     <a href="#sports">🏏 Sports</a>
     <a href="#learning">🧠 Learning</a>
+
+    <h4>About</h4>
+    <a href="about.html">ℹ️ About HarDil</a>
+    <a href="about.html#story">❤️ Our Story</a>
+    <a href="about.html#motive">🎯 Motive & Vision</a>
+
+    <h4>Legal</h4>
+    <a href="privacy.html">🔒 Privacy Policy</a>
+    <a href="terms.html">📜 Terms & Conditions</a>
+    <a href="legal.html">⚖️ Legal Disclaimer</a>
+
+    <h4>Support</h4>
+    <a href="mailto:aghari128@gmail.com">📩 Contact Us</a>
+
   </div>
 </aside>
 
@@ -67,7 +83,7 @@
   <p>Family First · One Place for Everything</p>
 </header>
 
-<!-- ===== MAIN ===== -->
+<!-- ===== MAIN CONTENT ===== -->
 <main class="app">
 
 <!-- 🌐 SOCIAL -->
@@ -86,7 +102,7 @@
 <!-- 💼 JOBS -->
 <section class="card" id="jobs">
   <h2>💼 Jobs & Career</h2>
-  <p class="section-sub">Find jobs, internships & growth</p>
+  <p class="section-sub">Find jobs, internships & career growth</p>
   <div class="grid">
     <div class="app-btn"><img src="assets/icons/linkedin.png"><span>LinkedIn</span></div>
     <div class="app-btn"><img src="assets/icons/naukri.png"><span>Naukri</span></div>
@@ -134,7 +150,7 @@
   </div>
 </section>
 
-<!-- ✈️ TRAVEL (EXPANDED PROPERLY) -->
+<!-- ✈️ TRAVEL -->
 <section class="card" id="travel">
   <h2>✈️ Travel & Booking</h2>
   <div class="grid">
@@ -206,9 +222,15 @@
 
 <!-- ===== FOOTER ===== -->
 <footer class="footer">
+  <strong>HarDil</strong> — Family First · One Place for Everything<br><br>
+  <a href="about.html">About</a> ·
+  <a href="privacy.html">Privacy</a> ·
+  <a href="terms.html">Terms</a> ·
+  <a href="legal.html">Legal</a> ·
+  <a href="mailto:aghari128@gmail.com">Contact</a>
+  <br><br>
   HarDil strictly redirects users to official websites only.<br>
-  No logins stored · No payments · No betting.<br>
-  <strong>Family First — Always.</strong>
+  No logins stored · No payments · No betting.
 </footer>
 
 <!-- ===== DRAWER SCRIPT ===== -->
