--- a/index.html
+++ b/index.html
@@ -32,17 +32,14 @@
 <header class="top-app-bar">
   <div style="display:flex;align-items:center;gap:14px;">
     <span class="top-app-title">HarDil</span>
-
-    <!-- TOP LINKS -->
     <nav style="display:flex;gap:12px;font-size:13px;">
-      <a href="about.html" style="color:#cbd5f5;text-decoration:none;">About</a>
-      <a href="privacy.html" style="color:#cbd5f5;text-decoration:none;">Privacy</a>
-      <a href="terms.html" style="color:#cbd5f5;text-decoration:none;">Terms</a>
-      <a href="legal.html" style="color:#cbd5f5;text-decoration:none;">Legal</a>
-      <a href="mailto:aghari128@gmail.com" style="color:#cbd5f5;text-decoration:none;">Contact</a>
+      <a href="about.html">About</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="terms.html">Terms</a>
+      <a href="legal.html">Legal</a>
+      <a href="mailto:aghari128@gmail.com">Contact</a>
     </nav>
   </div>
-
   <span class="menu-icon" id="openMenu">☰</span>
 </header>
 
@@ -54,7 +51,6 @@
   </div>
 
   <div class="drawer-content">
-
     <h4>Navigate</h4>
     <a href="#social">🌐 Social</a>
     <a href="#jobs">💼 Jobs</a>
@@ -80,7 +76,6 @@
 
     <h4>Support</h4>
     <a href="mailto:aghari128@gmail.com">📩 Contact Us</a>
-
   </div>
 </aside>
 
@@ -128,7 +123,107 @@
   </div>
 </section>
 
-<!-- (ALL OTHER SECTIONS REMAIN UNCHANGED: OTT, MUSIC, SHOPPING, TRAVEL, RIDES, FOOD, HEALTH, SPORTS, LEARNING) -->
+<!-- 🎬 OTT -->
+<section class="card" id="ott">
+  <h2>🎬 OTT Platforms</h2>
+  <div class="grid">
+    <div class="app-btn"><img src="assets/icons/netflix.png"><span>Netflix</span></div>
+    <div class="app-btn"><img src="assets/icons/prime.png"><span>Prime Video</span></div>
+    <div class="app-btn"><img src="assets/icons/hotstar.png"><span>Hotstar</span></div>
+    <div class="app-btn"><img src="assets/icons/youtube.png"><span>YouTube</span></div>
+  </div>
+</section>
+
+<!-- 🎵 MUSIC -->
+<section class="card" id="music">
+  <h2>🎵 Music</h2>
+  <div class="grid">
+    <div class="app-btn"><img src="assets/icons/spotify.png"><span>Spotify</span></div>
+    <div class="app-btn"><img src="assets/icons/youtubemusic.png"><span>YouTube Music</span></div>
+    <div class="app-btn"><img src="assets/icons/gaana.png"><span>Gaana</span></div>
+    <div class="app-btn"><img src="assets/icons/jiosaavn.png"><span>JioSaavn</span></div>
+  </div>
+</section>
+
+<!-- 🛒 SHOPPING -->
+<section class="card" id="shop">
+  <h2>🛒 Shopping</h2>
+  <div class="grid">
+    <div class="app-btn"><img src="assets/icons/amazon.png"><span>Amazon</span></div>
+    <div class="app-btn"><img src="assets/icons/flipkart.png"><span>Flipkart</span></div>
+    <div class="app-btn"><img src="assets/icons/myntra.png"><span>Myntra</span></div>
+    <div class="app-btn"><img src="assets/icons/ajio.png"><span>Ajio</span></div>
+    <div class="app-btn"><img src="assets/icons/meesho.png"><span>Meesho</span></div>
+  </div>
+</section>
+
+<!-- ✈️ TRAVEL -->
+<section class="card" id="travel">
+  <h2>✈️ Travel & Booking</h2>
+  <div class="grid">
+    <div class="app-btn"><img src="assets/icons/irctc.png"><span>IRCTC</span></div>
+    <div class="app-btn"><img src="assets/icons/makemytrip.png"><span>MakeMyTrip</span></div>
+    <div class="app-btn"><img src="assets/icons/goibibo.png"><span>Goibibo</span></div>
+    <div class="app-btn"><img src="assets/icons/yatra.png"><span>Yatra</span></div>
+    <div class="app-btn"><img src="assets/icons/easemytrip.png"><span>EaseMyTrip</span></div>
+    <div class="app-btn"><img src="assets/icons/booking.png"><span>Booking.com</span></div>
+    <div class="app-btn"><img src="assets/icons/oyo.png"><span>OYO</span></div>
+    <div class="app-btn"><img src="assets/icons/airbnb.png"><span>Airbnb</span></div>
+    <div class="app-btn"><img src="assets/icons/redbus.png"><span>RedBus</span></div>
+  </div>
+</section>
+
+<!-- 🚕 RIDES -->
+<section class="card" id="rides">
+  <h2>🚕 Rides</h2>
+  <div class="grid">
+    <div class="app-btn"><img src="assets/icons/uber.png"><span>Uber</span></div>
+    <div class="app-btn"><img src="assets/icons/ola.png"><span>Ola</span></div>
+    <div class="app-btn"><img src="assets/icons/rapido.png"><span>Rapido</span></div>
+    <div class="app-btn"><img src="assets/icons/nammayatri.png"><span>Namma Yatri</span></div>
+  </div>
+</section>
+
+<!-- 🍔 FOOD -->
+<section class="card" id="food">
+  <h2>🍔 Food Delivery</h2>
+  <div class="grid">
+    <div class="app-btn"><img src="assets/icons/zomato.png"><span>Zomato</span></div>
+    <div class="app-btn"><img src="assets/icons/swiggy.png"><span>Swiggy</span></div>
+    <div class="app-btn"><img src="assets/icons/dominos.png"><span>Domino’s</span></div>
+    <div class="app-btn"><img src="assets/icons/pizzahut.png"><span>Pizza Hut</span></div>
+  </div>
+</section>
+
+<!-- 🩺 HEALTH -->
+<section class="card" id="health">
+  <h2>🩺 Health & Pharmacy</h2>
+  <div class="grid">
+    <div class="app-btn"><img src="assets/icons/1mg.png"><span>Tata 1mg</span></div>
+    <div class="app-btn"><img src="assets/icons/pharmeasy.png"><span>PharmEasy</span></div>
+    <div class="app-btn"><img src="assets/icons/practo.png"><span>Practo</span></div>
+    <div class="app-btn"><img src="assets/icons/apollo.png"><span>Apollo 24/7</span></div>
+  </div>
+</section>
+
+<!-- 🏏 SPORTS -->
+<section class="card" id="sports">
+  <h2>🏏 Sports</h2>
+  <div class="grid">
+    <div class="app-btn"><img src="assets/icons/cricbuzz.png"><span>Cricbuzz</span></div>
+    <div class="app-btn"><img src="assets/icons/hotstar.png"><span>Hotstar Sports</span></div>
+  </div>
+</section>
+
+<!-- 🧠 LEARNING -->
+<section class="card" id="learning">
+  <h2>🧠 Learning & Growth</h2>
+  <div class="grid">
+    <div class="app-btn"><img src="assets/icons/ted.png"><span>TED</span></div>
+    <div class="app-btn"><img src="assets/icons/coursera.png"><span>Coursera</span></div>
+    <div class="app-btn"><img src="assets/icons/udemy.png"><span>Udemy</span></div>
+  </div>
+</section>
 
 </main>
 
@@ -166,3 +261,4 @@
 
 </body>
 </html>
+
