--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="./style.css">
 
-  <!-- Splash (once per tab) -->
+  <!-- Splash -->
   <script>
     try {
       if (sessionStorage.getItem("harDilSplash") !== "done") {
@@ -28,25 +28,11 @@
 
 <body>
 
-<!-- ===== TOP APP BAR ===== -->
 <header class="top-app-bar">
-  <div style="display:flex;align-items:center;gap:14px;">
-    <span class="top-app-title">HarDil</span>
-
-    <nav style="display:flex;gap:12px;font-size:13px;">
-      <a href="about.html">About</a>
-      <a href="privacy.html">Privacy</a>
-      <a href="terms.html">Terms</a>
-      <a href="legal.html">Legal</a>
-      <a href="mailto:aghari128@gmail.com">Contact</a>
-    </nav>
-  </div>
-
-  <!-- Dark / Light Toggle -->
-  <button onclick="toggleTheme()" aria-label="Toggle theme">🌓</button>
+  <span class="top-app-title">HarDil</span>
+  <button onclick="toggleTheme()">🌓</button>
 </header>
 
-<!-- ===== HERO ===== -->
 <header class="hero">
   <div class="brand">
     <div class="heart"></div>
@@ -55,36 +41,34 @@
   <p>Family First · One Place for Everything</p>
 </header>
 
-<!-- ===== MAIN CONTENT ===== -->
 <main class="app">
 
 <!-- 🌐 SOCIAL -->
 <section class="card" id="social">
   <h2>🌐 Social Media</h2>
   <div class="grid">
-    <div class="app-btn"><img src="assets/icons/whatsapp.png"><span>WhatsApp</span></div>
-    <div class="app-btn"><img src="assets/icons/instagram.png"><span>Instagram</span></div>
-    <div class="app-btn"><img src="assets/icons/gmail.png"><span>Gmail</span></div>
-    <div class="app-btn"><img src="assets/icons/telegram.png"><span>Telegram</span></div>
-    <div class="app-btn"><img src="assets/icons/facebook.png"><span>Facebook</span></div>
-    <div class="app-btn"><img src="assets/icons/twitter.png"><span>Twitter (X)</span></div>
+    <div class="app-btn" data-url="https://web.whatsapp.com"><img src="assets/icons/whatsapp.png"><span>WhatsApp</span></div>
+    <div class="app-btn" data-url="https://www.instagram.com"><img src="assets/icons/instagram.png"><span>Instagram</span></div>
+    <div class="app-btn" data-url="https://mail.google.com"><img src="assets/icons/gmail.png"><span>Gmail</span></div>
+    <div class="app-btn" data-url="https://web.telegram.org"><img src="assets/icons/telegram.png"><span>Telegram</span></div>
+    <div class="app-btn" data-url="https://www.facebook.com"><img src="assets/icons/facebook.png"><span>Facebook</span></div>
+    <div class="app-btn" data-url="https://twitter.com"><img src="assets/icons/twitter.png"><span>Twitter (X)</span></div>
   </div>
 </section>
 
 <!-- 💼 JOBS -->
 <section class="card" id="jobs">
   <h2>💼 Jobs & Career</h2>
-  <p class="section-sub">Find jobs, internships & career growth</p>
   <div class="grid">
-    <div class="app-btn"><img src="assets/icons/linkedin.png"><span>LinkedIn</span></div>
-    <div class="app-btn"><img src="assets/icons/naukri.png"><span>Naukri</span></div>
-    <div class="app-btn"><img src="assets/icons/indeed.png"><span>Indeed</span></div>
-    <div class="app-btn"><img src="assets/icons/glassdoor.png"><span>Glassdoor</span></div>
-    <div class="app-btn"><img src="assets/icons/foundit.png"><span>Foundit</span></div>
-    <div class="app-btn"><img src="assets/icons/unstop.png"><span>Unstop</span></div>
-    <div class="app-btn"><img src="assets/icons/shine.png"><span>Shine</span></div>
-    <div class="app-btn"><img src="assets/icons/cutshort.png"><span>CutShort</span></div>
-    <div class="app-btn"><img src="assets/icons/internshala.png"><span>Internshala</span></div>
+    <div class="app-btn" data-url="https://www.linkedin.com/jobs"><img src="assets/icons/linkedin.png"><span>LinkedIn</span></div>
+    <div class="app-btn" data-url="https://www.naukri.com"><img src="assets/icons/naukri.png"><span>Naukri</span></div>
+    <div class="app-btn" data-url="https://www.indeed.com"><img src="assets/icons/indeed.png"><span>Indeed</span></div>
+    <div class="app-btn" data-url="https://www.glassdoor.com"><img src="assets/icons/glassdoor.png"><span>Glassdoor</span></div>
+    <div class="app-btn" data-url="https://www.foundit.in"><img src="assets/icons/foundit.png"><span>Foundit</span></div>
+    <div class="app-btn" data-url="https://unstop.com"><img src="assets/icons/unstop.png"><span>Unstop</span></div>
+    <div class="app-btn" data-url="https://www.shine.com"><img src="assets/icons/shine.png"><span>Shine</span></div>
+    <div class="app-btn" data-url="https://cutshort.io"><img src="assets/icons/cutshort.png"><span>CutShort</span></div>
+    <div class="app-btn" data-url="https://internshala.com"><img src="assets/icons/internshala.png"><span>Internshala</span></div>
   </div>
 </section>
 
@@ -92,10 +76,10 @@
 <section class="card" id="ott">
   <h2>🎬 OTT Platforms</h2>
   <div class="grid">
-    <div class="app-btn"><img src="assets/icons/netflix.png"><span>Netflix</span></div>
-    <div class="app-btn"><img src="assets/icons/prime.png"><span>Prime Video</span></div>
-    <div class="app-btn"><img src="assets/icons/hotstar.png"><span>Hotstar</span></div>
-    <div class="app-btn"><img src="assets/icons/youtube.png"><span>YouTube</span></div>
+    <div class="app-btn" data-url="https://www.netflix.com"><img src="assets/icons/netflix.png"><span>Netflix</span></div>
+    <div class="app-btn" data-url="https://www.primevideo.com"><img src="assets/icons/prime.png"><span>Prime Video</span></div>
+    <div class="app-btn" data-url="https://www.hotstar.com"><img src="assets/icons/hotstar.png"><span>Hotstar</span></div>
+    <div class="app-btn" data-url="https://www.youtube.com"><img src="assets/icons/youtube.png"><span>YouTube</span></div>
   </div>
 </section>
 
@@ -103,10 +87,10 @@
 <section class="card" id="music">
   <h2>🎵 Music</h2>
   <div class="grid">
-    <div class="app-btn"><img src="assets/icons/spotify.png"><span>Spotify</span></div>
-    <div class="app-btn"><img src="assets/icons/youtubemusic.png"><span>YouTube Music</span></div>
-    <div class="app-btn"><img src="assets/icons/gaana.png"><span>Gaana</span></div>
-    <div class="app-btn"><img src="assets/icons/jiosaavn.png"><span>JioSaavn</span></div>
+    <div class="app-btn" data-url="https://www.spotify.com"><img src="assets/icons/spotify.png"><span>Spotify</span></div>
+    <div class="app-btn" data-url="https://music.youtube.com"><img src="assets/icons/youtubemusic.png"><span>YouTube Music</span></div>
+    <div class="app-btn" data-url="https://gaana.com"><img src="assets/icons/gaana.png"><span>Gaana</span></div>
+    <div class="app-btn" data-url="https://www.jiosaavn.com"><img src="assets/icons/jiosaavn.png"><span>JioSaavn</span></div>
   </div>
 </section>
 
@@ -114,11 +98,11 @@
 <section class="card" id="shop">
   <h2>🛒 Shopping</h2>
   <div class="grid">
-    <div class="app-btn"><img src="assets/icons/amazon.png"><span>Amazon</span></div>
-    <div class="app-btn"><img src="assets/icons/flipkart.png"><span>Flipkart</span></div>
-    <div class="app-btn"><img src="assets/icons/myntra.png"><span>Myntra</span></div>
-    <div class="app-btn"><img src="assets/icons/ajio.png"><span>Ajio</span></div>
-    <div class="app-btn"><img src="assets/icons/meesho.png"><span>Meesho</span></div>
+    <div class="app-btn" data-url="https://www.amazon.in"><img src="assets/icons/amazon.png"><span>Amazon</span></div>
+    <div class="app-btn" data-url="https://www.flipkart.com"><img src="assets/icons/flipkart.png"><span>Flipkart</span></div>
+    <div class="app-btn" data-url="https://www.myntra.com"><img src="assets/icons/myntra.png"><span>Myntra</span></div>
+    <div class="app-btn" data-url="https://www.ajio.com"><img src="assets/icons/ajio.png"><span>Ajio</span></div>
+    <div class="app-btn" data-url="https://www.meesho.com"><img src="assets/icons/meesho.png"><span>Meesho</span></div>
   </div>
 </section>
 
@@ -126,73 +110,15 @@
 <section class="card" id="travel">
   <h2>✈️ Travel & Booking</h2>
   <div class="grid">
-    <div class="app-btn"><img src="assets/icons/irctc.png"><span>IRCTC</span></div>
-    <div class="app-btn"><img src="assets/icons/makemytrip.png"><span>MakeMyTrip</span></div>
-    <div class="app-btn"><img src="assets/icons/goibibo.png"><span>Goibibo</span></div>
-    <div class="app-btn"><img src="assets/icons/yatra.png"><span>Yatra</span></div>
-    <div class="app-btn"><img src="assets/icons/easemytrip.png"><span>EaseMyTrip</span></div>
-    <div class="app-btn"><img src="assets/icons/booking.png"><span>Booking.com</span></div>
-    <div class="app-btn"><img src="assets/icons/oyo.png"><span>OYO</span></div>
-    <div class="app-btn"><img src="assets/icons/airbnb.png"><span>Airbnb</span></div>
-    <div class="app-btn"><img src="assets/icons/redbus.png"><span>RedBus</span></div>
-  </div>
-</section>
-
-<!-- 🚕 RIDES -->
-<section class="card" id="rides">
-  <h2>🚕 Rides</h2>
-  <div class="grid">
-    <div class="app-btn"><img src="assets/icons/uber.png"><span>Uber</span></div>
-    <div class="app-btn"><img src="assets/icons/ola.png"><span>Ola</span></div>
-    <div class="app-btn"><img src="assets/icons/rapido.png"><span>Rapido</span></div>
-    <div class="app-btn"><img src="assets/icons/nammayatri.png"><span>Namma Yatri</span></div>
-  </div>
-</section>
-
-<!-- 🍔 FOOD -->
-<section class="card" id="food">
-  <h2>🍔 Food Delivery</h2>
-  <div class="grid">
-    <div class="app-btn"><img src="assets/icons/zomato.png"><span>Zomato</span></div>
-    <div class="app-btn"><img src="assets/icons/swiggy.png"><span>Swiggy</span></div>
-    <div class="app-btn"><img src="assets/icons/dominos.png"><span>Domino’s</span></div>
-    <div class="app-btn"><img src="assets/icons/pizzahut.png"><span>Pizza Hut</span></div>
-  </div>
-</section>
-
-<!-- 🩺 HEALTH -->
-<section class="card" id="health">
-  <h2>🩺 Health & Pharmacy</h2>
-  <div class="grid">
-    <div class="app-btn"><img src="assets/icons/1mg.png"><span>Tata 1mg</span></div>
-    <div class="app-btn"><img src="assets/icons/pharmeasy.png"><span>PharmEasy</span></div>
-    <div class="app-btn"><img src="assets/icons/practo.png"><span>Practo</span></div>
-    <div class="app-btn"><img src="assets/icons/apollo.png"><span>Apollo 24/7</span></div>
-  </div>
-</section>
-
-<!-- 🏏 SPORTS -->
-<section class="card" id="sports">
-  <h2>🏏 Sports</h2>
-  <div class="grid">
-    <div class="app-btn"><img src="assets/icons/cricbuzz.png"><span>Cricbuzz</span></div>
-    <div class="app-btn"><img src="assets/icons/hotstar.png"><span>Hotstar Sports</span></div>
-  </div>
-</section>
-
-<!-- 🧠 LEARNING -->
-<section class="card" id="learning">
-  <h2>🧠 Learning & Growth</h2>
-  <div class="grid">
-    <div class="app-btn"><img src="assets/icons/ted.png"><span>TED</span></div>
-    <div class="app-btn"><img src="assets/icons/coursera.png"><span>Coursera</span></div>
-    <div class="app-btn"><img src="assets/icons/udemy.png"><span>Udemy</span></div>
+    <div class="app-btn" data-url="https://www.irctc.co.in"><img src="assets/icons/irctc.png"><span>IRCTC</span></div>
+    <div class="app-btn" data-url="https://www.makemytrip.com"><img src="assets/icons/makemytrip.png"><span>MakeMyTrip</span></div>
+    <div class="app-btn" data-url="https://www.goibibo.com"><img src="assets/icons/goibibo.png"><span>Goibibo</span></div>
+    <div class="app-btn" data-url="https://www.redbus.in"><img src="assets/icons/redbus.png"><span>RedBus</span></div>
   </div>
 </section>
 
 </main>
 
-<!-- ===== BOTTOM NAV ===== -->
 <nav class="bottom-nav">
   <button onclick="location.href='#social'">Home</button>
   <button onclick="location.href='#jobs'">Jobs</button>
@@ -200,18 +126,24 @@
   <button onclick="location.href='#music'">Music</button>
 </nav>
 
-<!-- ===== FOOTER ===== -->
 <footer class="footer">
-  <strong>HarDil</strong> — Family First · One Place for Everything<br><br>
   HarDil strictly redirects users to official websites only.<br>
   No logins stored · No payments · No betting.
 </footer>
 
-<!-- ===== THEME TOGGLE ===== -->
 <script>
   function toggleTheme() {
     document.body.classList.toggle("light");
   }
+
+  document.querySelectorAll(".app-btn").forEach(btn => {
+    btn.addEventListener("click", () => {
+      const url = btn.getAttribute("data-url");
+      if (url) {
+        window.open(url, "_blank", "noopener,noreferrer");
+      }
+    });
+  });
 </script>
 
 </body>
