--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
 
-  <!-- Splash control -->
+  <!-- Splash -->
   <script>
     try {
       if (sessionStorage.getItem("harDilSplash") !== "done") {
@@ -28,7 +28,7 @@
 
 <body>
 
-<!-- ===== TOP APP BAR ===== -->
+<!-- ===== TOP BAR ===== -->
 <header class="top-app-bar">
   <span class="top-app-title">HarDil</span>
   <span class="menu-icon" id="openMenu">☰</span>
@@ -42,7 +42,6 @@
   </div>
 
   <div class="drawer-content">
-
     <h4>Navigate</h4>
     <a href="#social">🌐 Social</a>
     <a href="#jobs">💼 Jobs</a>
@@ -68,7 +67,6 @@
 
     <h4>Support</h4>
     <a href="mailto:aghari128@gmail.com">📩 Contact Us</a>
-
   </div>
 </aside>
 
@@ -83,49 +81,49 @@
   <p>Family First · One Place for Everything</p>
 </header>
 
-<!-- ===== MAIN CONTENT ===== -->
+<!-- ===== MAIN ===== -->
 <main class="app">
 
-<!-- 🌐 SOCIAL -->
+<!-- SOCIAL -->
 <section class="card" id="social">
   <h2>🌐 Social Media</h2>
   <div class="grid">
     <div class="app-btn" data-url="https://web.whatsapp.com"><img src="assets/icons/whatsapp.png"><span>WhatsApp</span></div>
-    <div class="app-btn" data-url="https://instagram.com"><img src="assets/icons/instagram.png"><span>Instagram</span></div>
-    <div class="app-btn" data-url="https://facebook.com"><img src="assets/icons/facebook.png"><span>Facebook</span></div>
-    <div class="app-btn" data-url="https://twitter.com"><img src="assets/icons/twitter.png"><span>Twitter (X)</span></div>
-    <div class="app-btn" data-url="https://web.telegram.org"><img src="assets/icons/telegram.png"><span>Telegram</span></div>
+    <div class="app-btn" data-url="https://www.instagram.com"><img src="assets/icons/instagram.png"><span>Instagram</span></div>
     <div class="app-btn" data-url="https://mail.google.com"><img src="assets/icons/gmail.png"><span>Gmail</span></div>
+    <div class="app-btn" data-url="https://web.telegram.org"><img src="assets/icons/telegram.png"><span>Telegram</span></div>
+    <div class="app-btn" data-url="https://www.facebook.com"><img src="assets/icons/facebook.png"><span>Facebook</span></div>
+    <div class="app-btn" data-url="https://twitter.com"><img src="assets/icons/twitter.png"><span>Twitter (X)</span></div>
   </div>
 </section>
 
-<!-- 💼 JOBS -->
+<!-- JOBS -->
 <section class="card" id="jobs">
   <h2>💼 Jobs & Career</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://linkedin.com/jobs"><img src="assets/icons/linkedin.png"><span>LinkedIn</span></div>
-    <div class="app-btn" data-url="https://naukri.com"><img src="assets/icons/naukri.png"><span>Naukri</span></div>
-    <div class="app-btn" data-url="https://indeed.com"><img src="assets/icons/indeed.png"><span>Indeed</span></div>
-    <div class="app-btn" data-url="https://glassdoor.com"><img src="assets/icons/glassdoor.png"><span>Glassdoor</span></div>
+    <div class="app-btn" data-url="https://www.linkedin.com/jobs"><img src="assets/icons/linkedin.png"><span>LinkedIn</span></div>
+    <div class="app-btn" data-url="https://www.naukri.com"><img src="assets/icons/naukri.png"><span>Naukri</span></div>
+    <div class="app-btn" data-url="https://www.indeed.com"><img src="assets/icons/indeed.png"><span>Indeed</span></div>
+    <div class="app-btn" data-url="https://www.glassdoor.com"><img src="assets/icons/glassdoor.png"><span>Glassdoor</span></div>
     <div class="app-btn" data-url="https://internshala.com"><img src="assets/icons/internshala.png"><span>Internshala</span></div>
     <div class="app-btn" data-url="https://unstop.com"><img src="assets/icons/unstop.png"><span>Unstop</span></div>
-    <div class="app-btn" data-url="https://shine.com"><img src="assets/icons/shine.png"><span>Shine</span></div>
+    <div class="app-btn" data-url="https://www.shine.com"><img src="assets/icons/shine.png"><span>Shine</span></div>
     <div class="app-btn" data-url="https://cutshort.io"><img src="assets/icons/cutshort.png"><span>CutShort</span></div>
   </div>
 </section>
 
-<!-- 🎬 OTT -->
+<!-- OTT -->
 <section class="card" id="ott">
   <h2>🎬 OTT Platforms</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://netflix.com"><img src="assets/icons/netflix.png"><span>Netflix</span></div>
-    <div class="app-btn" data-url="https://primevideo.com"><img src="assets/icons/prime.png"><span>Prime Video</span></div>
-    <div class="app-btn" data-url="https://hotstar.com"><img src="assets/icons/hotstar.png"><span>Hotstar</span></div>
-    <div class="app-btn" data-url="https://youtube.com"><img src="assets/icons/youtube.png"><span>YouTube</span></div>
+    <div class="app-btn" data-url="https://www.netflix.com"><img src="assets/icons/netflix.png"><span>Netflix</span></div>
+    <div class="app-btn" data-url="https://www.primevideo.com"><img src="assets/icons/prime.png"><span>Prime Video</span></div>
+    <div class="app-btn" data-url="https://www.hotstar.com"><img src="assets/icons/hotstar.png"><span>Hotstar</span></div>
+    <div class="app-btn" data-url="https://www.youtube.com"><img src="assets/icons/youtube.png"><span>YouTube</span></div>
   </div>
 </section>
 
-<!-- 🎵 MUSIC -->
+<!-- MUSIC -->
 <section class="card" id="music">
   <h2>🎵 Music</h2>
   <div class="grid">
@@ -136,7 +134,7 @@
   </div>
 </section>
 
-<!-- 🛒 SHOPPING -->
+<!-- SHOPPING -->
 <section class="card" id="shop">
   <h2>🛒 Shopping</h2>
   <div class="grid">
@@ -148,70 +146,26 @@
   </div>
 </section>
 
-<!-- ✈️ TRAVEL -->
+<!-- TRAVEL -->
 <section class="card" id="travel">
   <h2>✈️ Travel & Booking</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://irctc.co.in"><img src="assets/icons/irctc.png"><span>IRCTC</span></div>
+    <div class="app-btn" data-url="https://www.irctc.co.in"><img src="assets/icons/irctc.png"><span>IRCTC</span></div>
     <div class="app-btn" data-url="https://makemytrip.com"><img src="assets/icons/makemytrip.png"><span>MakeMyTrip</span></div>
     <div class="app-btn" data-url="https://goibibo.com"><img src="assets/icons/goibibo.png"><span>Goibibo</span></div>
-    <div class="app-btn" data-url="https://redbus.in"><img src="assets/icons/redbus.png"><span>RedBus</span></div>
-    <div class="app-btn" data-url="https://booking.com"><img src="assets/icons/booking.png"><span>Booking</span></div>
-    <div class="app-btn" data-url="https://oyo.com"><img src="assets/icons/oyo.png"><span>OYO</span></div>
-    <div class="app-btn" data-url="https://airbnb.com"><img src="assets/icons/airbnb.png"><span>Airbnb</span></div>
-  </div>
-</section>
-
-<!-- 🚕 RIDES -->
-<section class="card" id="rides">
-  <h2>🚕 Rides</h2>
-  <div class="grid">
-    <div class="app-btn" data-url="https://uber.com"><img src="assets/icons/uber.png"><span>Uber</span></div>
-    <div class="app-btn" data-url="https://olacabs.com"><img src="assets/icons/ola.png"><span>Ola</span></div>
-    <div class="app-btn" data-url="https://rapido.bike"><img src="assets/icons/rapido.png"><span>Rapido</span></div>
-    <div class="app-btn" data-url="https://nammayatri.in"><img src="assets/icons/nammayatri.png"><span>Namma Yatri</span></div>
-  </div>
-</section>
-
-<!-- 🍔 FOOD -->
-<section class="card" id="food">
-  <h2>🍔 Food Delivery</h2>
-  <div class="grid">
-    <div class="app-btn" data-url="https://zomato.com"><img src="assets/icons/zomato.png"><span>Zomato</span></div>
-    <div class="app-btn" data-url="https://swiggy.com"><img src="assets/icons/swiggy.png"><span>Swiggy</span></div>
-    <div class="app-btn" data-url="https://dominos.co.in"><img src="assets/icons/dominos.png"><span>Domino’s</span></div>
-    <div class="app-btn" data-url="https://pizzahut.co.in"><img src="assets/icons/pizzahut.png"><span>Pizza Hut</span></div>
-  </div>
-</section>
-
-<!-- 🩺 HEALTH -->
-<section class="card" id="health">
-  <h2>🩺 Health</h2>
-  <div class="grid">
-    <div class="app-btn" data-url="https://1mg.com"><img src="assets/icons/1mg.png"><span>Tata 1mg</span></div>
-    <div class="app-btn" data-url="https://pharmeasy.in"><img src="assets/icons/pharmeasy.png"><span>PharmEasy</span></div>
-    <div class="app-btn" data-url="https://practo.com"><img src="assets/icons/practo.png"><span>Practo</span></div>
-    <div class="app-btn" data-url="https://apollo247.com"><img src="assets/icons/apollo.png"><span>Apollo 24/7</span></div>
-  </div>
-</section>
-
-<!-- 🧠 LEARNING -->
-<section class="card" id="learning">
-  <h2>🧠 Learning</h2>
-  <div class="grid">
-    <div class="app-btn" data-url="https://ted.com"><img src="assets/icons/ted.png"><span>TED</span></div>
-    <div class="app-btn" data-url="https://coursera.org"><img src="assets/icons/coursera.png"><span>Coursera</span></div>
-    <div class="app-btn" data-url="https://udemy.com"><img src="assets/icons/udemy.png"><span>Udemy</span></div>
+    <div class="app-btn" data-url="https://booking.com"><img src="assets/icons/booking.png"><span>Booking.com</span></div>
+    <div class="app-btn" data-url="https://www.redbus.in"><img src="assets/icons/redbus.png"><span>RedBus</span></div>
   </div>
 </section>
 
 </main>
 
 <footer class="footer">
-  HarDil strictly redirects users to official websites only.<br>
-  No logins stored · No payments · Family First.
+  HarDil redirects users only to official websites.<br>
+  No logins · No payments · Family First.
 </footer>
 
+<!-- ===== SCRIPTS ===== -->
 <script>
   const drawer = document.getElementById("drawer");
   const backdrop = document.getElementById("backdrop");
