--- a/index.html
+++ b/index.html
@@ -145,15 +145,48 @@
   </div>
 </section>
 
-<!-- RIDES -->
+<!-- 🚕 RIDES -->
 <section class="card" id="rides">
-  <h2>🚕 Rides</h2>
+  <h2>🚕 Rides & Transport</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://uber.com"><img src="assets/icons/uber.png"><span>Uber</span></div>
-    <div class="app-btn" data-url="https://olacabs.com"><img src="assets/icons/ola.png"><span>Ola</span></div>
-    <div class="app-btn" data-url="https://rapido.bike"><img src="assets/icons/rapido.png"><span>Rapido</span></div>
+    <div class="app-btn" data-url="https://uber.com">
+      <img src="assets/icons/uber.png"><span>Uber</span>
+    </div>
+
+    <div class="app-btn" data-url="https://olacabs.com">
+      <img src="assets/icons/ola.png"><span>Ola</span>
+    </div>
+
+    <div class="app-btn" data-url="https://rapido.bike">
+      <img src="assets/icons/rapido.png"><span>Rapido</span>
+    </div>
+
+    <div class="app-btn" data-url="https://nammayatri.in">
+      <img src="assets/icons/nammayatri.png"><span>Namma Yatri</span>
+    </div>
+
+    <div class="app-btn" data-url="https://blusmartmobility.com">
+      <img src="assets/icons/blusmart.png"><span>BluSmart</span>
+    </div>
+
+    <div class="app-btn" data-url="https://yulu.bike">
+      <img src="assets/icons/yulu.png"><span>Yulu</span>
+    </div>
+
+    <div class="app-btn" data-url="https://redbus.in">
+      <img src="assets/icons/redbus.png"><span>RedBus</span>
+    </div>
+
+    <div class="app-btn" data-url="https://indrive.com">
+      <img src="assets/icons/indrive.png"><span>inDrive</span>
+    </div>
+
+    <div class="app-btn" data-url="https://merucabs.com">
+      <img src="assets/icons/meru.png"><span>Meru Cabs</span>
+    </div>
   </div>
 </section>
+
 
 <!-- FOOD -->
 <section class="card" id="food">
