--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <a href="#travel">✈️ Travel</a>
     <a href="#rides">🚕 Rides</a>
     <a href="#food">🍔 Food</a>
+    <a href="#grocery">🛒 Grocery & Essentials</a>
     <a href="#health">🩺 Health</a>
     <a href="#sports">🏏 Sports</a>
     <a href="#learning">🧠 Learning</a>
@@ -188,16 +189,77 @@
 </section>
 
 
-<!-- FOOD -->
+<!-- 🍔 FOOD -->
 <section class="card" id="food">
-  <h2>🍔 Food</h2>
+  <h2>🍔 Food Delivery</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://zomato.com"><img src="assets/icons/zomato.png"><span>Zomato</span></div>
-    <div class="app-btn" data-url="https://swiggy.com"><img src="assets/icons/swiggy.png"><span>Swiggy</span></div>
-    <div class="app-btn" data-url="https://dominos.co.in"><img src="assets/icons/dominos.png"><span>Domino’s</span></div>
-    <div class="app-btn" data-url="https://pizzahut.co.in"><img src="assets/icons/pizzahut.png"><span>Pizza Hut</span></div>
+
+    <div class="app-btn" data-url="https://zomato.com">
+      <img src="assets/icons/zomato.png"><span>Zomato</span>
+    </div>
+
+    <div class="app-btn" data-url="https://swiggy.com">
+      <img src="assets/icons/swiggy.png"><span>Swiggy</span>
+    </div>
+
+    <div class="app-btn" data-url="https://dominos.co.in">
+      <img src="assets/icons/dominos.png"><span>Domino’s</span>
+    </div>
+
+    <div class="app-btn" data-url="https://pizzahut.co.in">
+      <img src="assets/icons/pizzahut.png"><span>Pizza Hut</span>
+    </div>
+
+    <div class="app-btn" data-url="https://mcdelivery.co.in">
+      <img src="assets/icons/mcdonalds.png"><span>McDonald’s</span>
+    </div>
+
+    <div class="app-btn" data-url="https://online.kfc.co.in">
+      <img src="assets/icons/kfc.png"><span>KFC</span>
+    </div>
+
+    <div class="app-btn" data-url="https://subway.com">
+      <img src="assets/icons/subway.png"><span>Subway</span>
+    </div>
+
   </div>
 </section>
+<!-- 🛒 GROCERY -->
+<section class="card" id="grocery">
+  <h2>🛒 Grocery & Essentials</h2>
+  <div class="grid">
+
+    <div class="app-btn" data-url="https://blinkit.com">
+      <img src="assets/icons/blinkit.png"><span>Blinkit</span>
+    </div>
+
+    <div class="app-btn" data-url="https://zepto.in">
+      <img src="assets/icons/zepto.png"><span>Zepto</span>
+    </div>
+
+    <div class="app-btn" data-url="https://bigbasket.com">
+      <img src="assets/icons/bigbasket.png"><span>BigBasket</span>
+    </div>
+
+    <div class="app-btn" data-url="https://jiomart.com">
+      <img src="assets/icons/jiomart.png"><span>JioMart</span>
+    </div>
+
+    <div class="app-btn" data-url="https://amazon.in/amazonfresh">
+      <img src="assets/icons/amazonfresh.png"><span>Amazon Fresh</span>
+    </div>
+
+    <div class="app-btn" data-url="https://grofers.com">
+      <img src="assets/icons/grofers.png"><span>Grofers</span>
+    </div>
+
+    <div class="app-btn" data-url="https://flipkart.com/grocery">
+      <img src="assets/icons/flipkartgrocery.png"><span>Flipkart Grocery</span>
+    </div>
+
+  </div>
+</section>
+
 
 <!-- HEALTH -->
 <section class="card" id="health">
